# mrp-utils

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  ObjectsFactory.h  QDetails.h  QState.h  QTraits.h  README.md  Tensor.h  Vector.h
.github/workflows/: tests.yml
TESTS/: tst_factory.cpp  tst_state.cpp  tst_tensor.cpp  tst_vector.cpp  vector.h
cmake/: FactorySettings.cmake  add_marple_test.cmake
common/: CMakeLists.txt
common/common/: IOMode.h
docs/: CMakeLists.txt
factory/: CMakeLists.txt
factory/factory/: ObjectsFactory.h
math/: CMakeLists.txt
math/math/: IOMode.h  Mode.h  Tensor.h  Type.h  Vector.h  details.h
quantities/: CMakeLists.txt
quantities/quantities/: State.h  Traits.h  details.h
tests/: CMakeLists.txt  tst_factory.cpp  tst_factory_static.cpp  tst_lib2.cpp  tst_lib2_static.cpp  tst_state.cpp  tst_tensor.cpp  tst_vector.cpp
tests/factory/: CMakeLists.txt  tst_factory.cpp
tests/factory/lib/: CMakeLists.txt  base.cpp  base.hpp  derived1.cpp  derived1.hpp  derived2.hpp  derived3.cpp  derived3.h
tests/lib/: CMakeLists.txt  derived1.cpp  derived2.cpp
tests/lib1/: CMakeLists.txt  base1.cpp  base1.hpp  derived11.cpp  derived12.cpp  derived12.hpp  register1.cpp
tests/lib1/lib1/: base1.cpp  derived11.hpp
tests/lib1_static/: CMakeLists.txt
tests/lib1_static/lib1/: base1.cpp  base1.h  derived11.cpp  derived11.h  derived12.cpp  derived12.h
tests/lib2/: CMakeLists.txt  base2.hpp  derived21.cpp  derived21.hpp  derived22.cpp  derived22.hpp  register2.cpp
tests/lib2/lib2/: base2.cpp  base2.hpp  derived21.cpp  derived21.hpp  derived22.cpp
tests/lib2_static/: CMakeLists.txt
tests/lib2_static/lib2/: base2.h  derived21.cpp  derived21.h  derived22.cpp  derived22.h
utils/: CMakeLists.txt
utils/utils/: IOMode.h  QDetails.h  QFwds.h  QState.cpp  QState.h  QTraits.h  Tensor.h  Utils.h  Vector.h
